Added rated scoring. Tests are disabled for the moment as many are failing
